# gorfector

./: .clang-format  .gitignore  .gitmodules  AboutView.hpp  App.cpp  App.h  App.hpp  AppState.h  AppState.hpp  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CurrentDeviceObserver.hpp  DeviceOptionState.cpp  DeviceOptionState.h  DeviceOptionState.hpp  DeviceOptionValue.h  DeviceOptionValue.hpp  DeviceOptionValueBase.h  DeviceOptionValueBase.hpp  DeviceOptionsObserver.hpp  DeviceOptionsPanel.cpp  DeviceOptionsPanel.h  DeviceOptionsPanel.hpp  DeviceOptionsState.cpp  DeviceOptionsState.hpp  DeviceSelector.cpp  DeviceSelector.h  DeviceSelector.hpp  DeviceSelectorObserver.hpp  DeviceSelectorState.cpp  DeviceSelectorState.h  DeviceSelectorState.hpp  DeviceSettingValue.h  DeviceSettingsPanel.cpp  DeviceSettingsPanel.h  DeviceSettingsState.h  DeviceSettingsValueBase.h  FileFormat.cpp  FileFormat.hpp  (+49 more)
.githooks/: clang_format_files.sh  pre-commit
.github/: FUNDING.yml
Commands/: ApplyPresetCommand.hpp  ChangeOptionCommand.h  ChangeOptionCommand.hpp  ChangeSettingCommand.h  CreatePresetCommand.hpp  CreateScanListItemCommand.hpp  DeletePresetCommand.hpp  DeleteScanItemCommand.hpp  DeviceSelectorCommands.h  DeviceSelectorCommands.hpp  LoadScanItemCommand.hpp  OpenDeviceCommand.h  RefreshDeviceList.hpp  RenamePresetCommand.hpp  SelectDeviceCommand.h  SelectDeviceCommand.hpp  SetCreateMissingDirectoriesCommand.hpp  SetFileExistsActionCommand.hpp  SetJpegQuality.hpp  SetOutputDestinationCommand.hpp  SetOutputDirectoryCommand.hpp  SetOutputFileNameCommand.hpp  SetPanAndZoomCommand.hpp  SetPanCommand.hpp  SetPngCompressionLevel.hpp  SetPresetExpanded.hpp  SetScanAreaCommand.hpp  SetScanMode.hpp  SetTiffCompression.hpp  SetTiffDeflateLevel.hpp  SetTiffJpegQuality.hpp  SetZoomCommand.hpp  ToggleUseScanList.hpp
OptionRewriter/: EpsonPerfectionV600PhotoRewriter.cpp  EpsonPerfectionV600PhotoRewriter.hpp  OptionRewriter.cpp  OptionRewriter.hpp
Tests/: CMakeLists.txt  ObserverManager_tests.cpp  StateComponent_tests.cpp  main.cpp
Tests/TestsSupport/: Commands.cpp  Commands.hpp  LogStateComponent.hpp  Observers.hpp  StateComponents.hpp
Tests/ZooLib/: AppMenuBarBuilder_tests.cpp  Application_tests.cpp  ChangesetManager_tests.cpp  CommandDispatcher_tests.cpp  ObserverManager_tests.cpp  StateComponent_tests.cpp  StringUtils_tests.cpp  View_tests.cpp
Writers/: FileWriter.cpp  FileWriter.hpp  JpegWriter.cpp  JpegWriter.hpp  JpegWriterState.hpp  JpegWriterStateComponent.hpp  PngWriter.cpp  PngWriter.hpp  PngWriterState.hpp  PngWriterStateComponent.hpp  TiffWriter.cpp  TiffWriter.hpp  TiffWriterState.hpp  TiffWriterStateComponent.hpp
ZooFW/: Application.cpp  Application.h  Application.hpp  ChangesetBase.hpp  ChangesetManager.h  ChangesetManager.hpp  Command.hpp  CommandDispatcher.h  CommandDispatcher.hpp  ErrorDialog.cpp  Observer.h  (+8 more)
data/: com.patrickfournier.gorfector.desktop.in  com.patrickfournier.gorfector.desktop.in.in  gorfector.resources.xml  meson.build
data/metainfo/: com.patrickfournier.gorfector.metainfo.xml.in.in  meson.build
help/: README.md  README.txt  meson.build
help/C/: cropping.page  file_params.page  gorfector.pot  index.page  legal.xml  presets.page  scan_list.page  scanning.page  select_device.page
help/fr/: fr.po
po/: POTFILES.in  README.txt  fr.po  gorfector.pot  meson.build
po/meson_helpers/: compile_all_mo.sh  update_all_po.sh  update_pot.sh
scanners/: README.txt  meson.build  strextractor.sh
scanners/epson/: perfection_v600_photo.json
src/: App.cpp  App.hpp  AppState.hpp  CurrentDeviceObserver.hpp  DeviceOptionsObserver.hpp  DeviceOptionsState.cpp  DeviceOptionsState.hpp  DeviceSelector.cpp  DeviceSelectorState.cpp  DeviceSelectorState.hpp  MultiScanProcess.hpp  OptionRewriter.cpp  OptionRewriter.hpp  OutputOptionsState.hpp  PathUtils.cpp  PreferencesView.cpp  PreferencesView.hpp  PresetCreateDialog.cpp  PresetPanel.cpp  PresetPanel.hpp  PresetPanelDialogs.hpp  PresetPanelState.hpp  PresetRenameDialog.cpp  PresetUpdateDialog.cpp  PreviewPanel.cpp  PreviewPanel.hpp  PreviewScanProcess.cpp  PreviewScanProcess.hpp  PreviewState.hpp  SaneDevice.hpp  SaneException.hpp  ScanListPanel.cpp  ScanListPanel.hpp  ScanListState.hpp  ScanOptionsPanel.cpp  ScanOptionsPanel.hpp  ScanProcess.cpp  ScanProcess.hpp  SingleScanProcess.hpp  main.cpp  (+1 more)
src/Commands/: ActivateNetworkLookUp.hpp  ChangeOptionCommand.hpp  ClearScanListCommand.hpp  CreatePresetCommand.hpp  CreateScanListItemCommand.hpp  LoadScanItemCommand.hpp  MoveScanListItemCommand.hpp  SelectDeviceCommand.hpp  SetAddToScanListAddsAllParamsCommand.hpp  SetJpegQuality.hpp  SetMouseBehaviorCommand.hpp  SetOutputDestinationCommand.hpp  SetOutputDirectoryCommand.hpp  SetPanCommand.hpp  SetScanAreaCommand.hpp  SetTiffCompression.hpp  SetTiffJpegQuality.hpp  SetZoomCommand.hpp  ToggleUseScanList.hpp  UpdatePresetCommand.hpp
src/Commands/DevMode/: SetDumpSaneOptions.hpp
src/Tests/: JpegWriter_tests.cpp  PngWriter_tests.cpp  TiffWriter_tests.cpp  main.cpp  meson.build
src/Tests/Data/: Gorfector_TiffWriterTestsFixture_CanWrite16bitsColorTiff_expected.tiff  Gorfector_TiffWriterTestsFixture_CanWrite16bitsGrayscaleTiff_expected.tiff  Gorfector_TiffWriterTestsFixture_CanWrite1bitTiff_expected.tiff  Gorfector_TiffWriterTestsFixture_CanWrite8BitColorTiff_expected.tiff  Gorfector_TiffWriterTestsFixture_CanWrite8BitGrayscaleTiff_expected.tiff
src/Tests/TestsSupport/: Applications.hpp  Changesets.hpp  CompareFiles.cpp  CompareFiles.hpp  ImageGenerator.hpp
src/Tests/ZooLib/: Application_tests.cpp  ChangesetManager_tests.cpp  GtkUtils_tests.cpp  State_tests.cpp
src/Writers/: FileWriter.cpp  FileWriter.hpp  JpegWriter.cpp  JpegWriter.hpp  PngWriter.cpp  PngWriter.hpp  TiffWriter.cpp  TiffWriter.hpp  TiffWriterState.hpp
src/ZooLib/: Application.cpp  Application.hpp  ChangesetBase.hpp  ChangesetManager.hpp  Command.hpp  CommandDispatcher.hpp  ErrorDialog.cpp  Gettext.hpp  Observer.hpp  ObserverManager.hpp  PathUtils.cpp  PathUtils.hpp  SignalSupport.hpp  State.cpp  State.hpp  StateComponent.hpp  StringUtils.hpp  View.hpp
(+33 files in other folders)
