languages = [
    'fr',
]

gnome.yelp ('gorfector',
            sources: [
                'cropping.page',
                'file_params.page',
                'index.page',
                'legal.xml',
                'presets.page',
                'scan_list.page',
                'scanning.page',
                'select_device.page',
            ],
            media: [
                'figures/gorfector.png',
            ],
            languages: languages,
            symlink_media: false)
